<resources>
    <string name="app_name">CardBe</string>
    <string name="description_quadradinhos">Background Image of Squares</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_nickname">Nickname</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_confirm_email">Confirm e-mail</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_confirm_new_password">Confirm New Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="click_here">Click here</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid E-mail</string>
    <string name="invalid_password">Password must have at least 7 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title">"Title"</string>
    <string name="description">"Description"</string>
    <string name="background">"Background"</string>
    <string name="first_fragment_label">Projects</string>
    <string name="second_fragment_label">Teams</string>
    <string name="third_fragment_label">Notifications</string>
    <string name="title_activity_home1">Home1</string>
    <string name="about_card_be_title">About CardBe</string>
    <string name="about_text">CardBe is a software designed for the subject \'Multimedia Application Development\', taught at Polytechnic Institute of Bragança for a master degree in Information Systems. This project was built in a collaboration of the students: Aline Lopes, Lara Mota, Leonardo Costa and Lucas Maltauro under the tutor of the Doctor Professor Paulo Alves. \n\n Logo made by @spacegirl.ag</string>
    <string name="board_title">Board</string>
    <string name="change_password_title">Change Password</string>
    <string name="secret_password">********</string>
    <string name="save_button">Save</string>
    <string name="example_board_title">Project A</string>
    <string name="example_description">Board to organize the team and activities</string>
    <string name="description_white_flower">Background with a picture of a white flower</string>
    <string name="description_fruits">Background with a picture of fruits</string>
    <string name="description_roses">Background with a picture of roses</string>
    <string name="description_palmeira_tree">Background with a picture of palmeira tree</string>
    <string name="description_filter_list_black">Icon of filter list in black</string>
    <string name="card_title">Card</string>
    <string name="example_card_title">My Card Title</string>
    <string name="example_card_description">It should be done like this…</string>
    <string name="description_attachment_black">Icon of attachment in black</string>
    <string name="attachment">Attach documents</string>
    <string name="description_check_box_black">Icon of checkbox in black</string>
    <string name="checklist">Add checklist</string>
    <string name="description_label_outline_black">Icon of label outline in black</string>
    <string name="labels">Add labels</string>
    <string name="description_access_time_black">Icon of access time in black</string>
    <string name="due_date">Add due date</string>
    <string name="description_person_black">Icon of person in black</string>
    <string name="add_members">Add members</string>
    <string name="comments">Comments</string>
    <string name="example_comment">It couldn\'t do like that so I…</string>
    <string name="description_chat_black">Icon of chat in black</string>
    <string name="delete_account_title">Delete Account</string>
    <string name="delete_account_text">If you delete your account all your data will be erased, you will not be able to recover your information later. If you still want to delete anyway please confirm your password.</string>
    <string name="delete_button">Delete</string>
    <string name="cancel_button">Cancel</string>
    <string name="recovery_link">Send Recovery Link To</string>
    <string name="example_email">user@email.com</string>
    <string name="send_button">Send</string>
    <string name="description_menu_green">Icon of menu in green</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="description_person_white">Icon of person in white</string>
    <string name="example_name">Carol</string>
    <string name="example_last_name">Smith</string>
    <string name="example_nickname">Carols</string>
    <string name="report_problem_title">Report a Problem</string>
    <string name="report_problem_text">If you have any problem, please contact us and we will take a look at your situation: \n\nE-mail: cardbe@email.com\nPhone: +351 XXX XXX XXX</string>
    <string name="settings_title">Settings</string>
    <string name="general">General</string>
    <string name="logout">Logout</string>
    <string name="notifications">Notifications</string>
    <string name="enable">Enable</string>
    <string name="terms">I agree with all the</string>
    <string name="termlink">Terms Services</string>
</resources>